chore: General code cleanup - favour getFirst() over get(0), use expression lambdas instead of statement lambdas etc.